--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  crypto: ^3.0.3
   flutter:
     sdk: flutter
   get: ^4.6.5
+  http: ^1.1.0
   shared_preferences: ^2.2.0
 
 dev_dependencies:
