--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  audio_service: ^0.18.10
+  audioplayers: ^5.1.0
   crypto: ^3.0.3
   flutter:
     sdk: flutter
