--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: netplayer_mobile
-description: A new Flutter project.
+description: netPlayer mobile version.
 publish_to: 'none'
 version: 1.0.0
 
