--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     
     <application
-        android:label="netplayer_mobile"
+        android:label="netPlayer Mobile"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
