添加对PWA支持

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "netplayer_mobile",
-    "short_name": "netplayer_mobile",
+    "name": "netPlayer Mobile",
+    "short_name": "netPlayer",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#ffffff",
+    "theme_color": "#ffffff",
+    "description": "netPlayer mobile version",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
