--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: netplayer_mobile
 description: netPlayer mobile version.
 publish_to: 'none'
-version: 1.0.2
+version: 1.1.0
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -14,6 +14,7 @@ dependencies:
   get: ^4.6.5
   http: ^1.1.0
   just_audio: ^0.9.35
+  package_info_plus: ^4.2.0
   shared_preferences: ^2.2.0
 
 dev_dependencies:
