--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   audio_service: ^0.18.12
   crypto: ^3.0.3
+  decimal: ^2.3.3
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.3.6
