--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
 dependencies:
   audio_service: ^0.18.12
   crypto: ^3.0.3
-  decimal: ^2.3.3
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.3.6
@@ -17,6 +16,7 @@ dependencies:
   http: ^1.1.0
   just_audio: ^0.9.35
   package_info_plus: ^4.2.0
+  scroll_to_index: ^3.0.1
   shared_preferences: ^2.2.0
   url_launcher: ^6.2.1
 
