--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.1.0
   just_audio: ^0.9.35
   package_info_plus: ^4.2.0
+  path_provider: ^2.1.2
   scroll_to_index: ^3.0.1
   shared_preferences: ^2.2.0
   url_launcher: ^6.2.1
