--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/public'}
         maven { url 'https://maven.aliyun.com/repository/google'}
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://mirrors.tuna.tsinghua.edu.cn/flutter/download.flutter.io' }
         // google()
         // mavenCentral()
     }
