--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: netplayer_mobile
 description: netPlayer mobile version.
 publish_to: 'none'
-version: 1.6.3
+version: 1.6.4
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.3.6
   get: ^4.6.5
+  google_fonts: ^6.2.1
   http: ^1.1.0
   just_audio: ^0.9.35
   package_info_plus: ^4.2.0
@@ -33,11 +34,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-  fonts:
-    - family: "Noto"
-      fonts:
-        - asset: assets/fonts/NotoSansSC-Bold.ttf
-        - asset: assets/fonts/NotoSansSC-Regular.ttf
 
 flutter_native_splash:
   web: false
