添加语言支持

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
