添加加载界面

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: ^4.6.6
   http: ^1.2.2
   adaptive_dialog: ^2.1.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
