--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^1.2.2
   adaptive_dialog: ^2.1.0
   loading_animation_widget: ^1.2.1
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
