--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   adaptive_dialog: ^2.1.0
   loading_animation_widget: ^1.2.1
   crypto: ^3.0.3
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
