--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,9 @@ dependencies:
   crypto: ^3.0.3
   url_launcher: ^6.3.0
   font_awesome_flutter: ^10.7.0
-  just_audio: ^0.9.37
   audio_service: ^0.18.15
   scroll_to_index: ^3.0.1
+  media_kit: ^1.0.2
 
 dev_dependencies:
   flutter_test:
