--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   scroll_to_index: ^3.0.1
   just_audio: ^0.9.37
   auto_size_text: ^3.0.0
+  easy_debounce: ^2.0.3
 
 dev_dependencies:
   flutter_test:
