--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: ^2.1.4
   dropdown_button2: ^2.3.9
   connectivity_plus: ^6.0.5
+  image: ^4.5.2
 
 dev_dependencies:
   flutter_test:
