--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   connectivity_plus: ^6.0.5
   image: ^4.5.2
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
