--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   connectivity_plus: ^6.0.5
   image: ^4.5.2
   package_info_plus: ^8.3.0
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
