更新代码以适配新版本Flutter

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,10 @@ android {
         targetCompatibility = JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "zhouc.netplayer_mobile"
         minSdk = flutter.minSdkVersion
