--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
 
-# systemProp.http.proxyHost=127.0.0.1
-# systemProp.http.proxyPort=7890
-# systemProp.https.proxyHost=127.0.0.1
-# systemProp.https.proxyPort=7890
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
