--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   package_info_plus: ^8.3.0
   clipboard: ^0.1.3
   forui: ^0.10.0+1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
