--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   image: ^4.5.2
   package_info_plus: ^8.3.0
   clipboard: ^0.1.3
-  forui: ^0.10.0+1
+  forui: ^0.12.0
   permission_handler: ^12.0.0+1
 
 dev_dependencies:
