--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   clipboard: ^0.1.3
   forui: ^0.12.0
   permission_handler: ^12.0.0+1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
