--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   forui: ^0.12.0
   permission_handler: ^12.0.0+1
   collection: ^1.19.1
+  skeletons_forked: ^0.0.4
 
 dev_dependencies:
   flutter_test:
