--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: netplayer_mobile
 description: netPlayer mobile version.
 publish_to: 'none'
-version: 2.4.1
+version: 2.4.2
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -12,7 +12,6 @@ dependencies:
   flutter_native_splash: ^2.4.1
   flutter_localizations:
     sdk: flutter
-  google_fonts: ^6.2.1
   shared_preferences: ^2.2.3
   get: ^4.6.6
   http: ^1.2.2
@@ -44,6 +43,13 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+  fonts:
+    - family: "PuHui"
+      fonts:
+        - asset: fonts/AlibabaPuHuiTi-3-Regular.ttf
+          weight: 400
+        - asset: fonts/AlibabaPuHuiTi-3-Bold.ttf
+          weight: 700
 
 flutter_native_splash:
   web: false
