--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   permission_handler: ^12.0.0+1
   collection: ^1.19.1
   skeletons_forked: ^0.0.4
+  dio: ^5.9.0
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
